--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #282c34;
+  border-radius: 2px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
 }
 
 body {
   background-color: #282c34;
+  background-color: #6b2d5c;
+  background-image: linear-gradient(316deg, #6b2d5c 0%, #e0e5e5 74%);
+
   color: #fff;
   font-family: "Roboto", sans-serif;
 }
