First Iteration of Profolio Site

--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,7 @@ body {
   color: #fff;
   font-family: "Roboto", sans-serif;
 }
+
+/* background-color: #282c34; dark
+     background-color: #d8dfed;  light
+*/
